[gd_scene load_steps=6 format=2]

[ext_resource path="res://Graphics/kenney/PNG/Retina/long_laser.png" type="Texture" id=1]
[ext_resource path="res://Graphics/kenney/PNG/Retina/laser_shooter.png" type="Texture" id=2]
[ext_resource path="res://Laser.gd" type="Script" id=3]
[ext_resource path="res://Graphics/kenney/PNG/Retina/number_3.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 14.0
height = 986.0

[node name="Laser" type="RigidBody2D"]
collision_layer = 4
mode = 1
script = ExtResource( 3 )

[node name="LaserShooter" type="Sprite" parent="."]
rotation = 1.5708
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 11, 13 )
polygon = PoolVector2Array( 23, 4, 23, -29, -13, -42, -44, -42, -44, 17, -13, 17 )

[node name="LongLaser" type="Sprite" parent="."]
visible = false
position = Vector2( 558, 0 )
rotation = 1.5708
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 19

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 558, 0 )
rotation = 1.5708
shape = SubResource( 1 )
disabled = true

[node name="NumbersSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 83, 0 )
texture = ExtResource( 4 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="FadeTween" type="Tween" parent="."]

[connection signal="body_entered" from="Area2D" to="." method="_on_Laser_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
